Bug 1926253 - Only enable fmt static assert for double conversion on recent clang. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D226656